
Version (CVS) 
-------------

JDO:   Fixed bug 1508 using contribution from Stein M. Hugubakken [dulci@start.no]
       Refactored code, applying strategy pattern.
       Details: http://bugzilla.exolab.org/show_bug.cgi?id=1508
       (Werner - 20040629)
       
JDO:   Fixed bug 1651 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added XML prefixes to various files in src/examples and src/tests/jdo.
       Details: http://bugzilla.exolab.org/show_bug.cgi?id=1651
       (Werner - 20040607)
       
XML:   Fixed a cyclic include bug with the IncludeUnmarshaller, added
       some code to make sure the main schema couldn't include itself.
       (kvisco - 20040624)

JDO:   Fixed bug 1445 using contribution from Stein M. Hugubakken [dulci@start.no]
       Fixed various small problems with SQL DDLs in src/tests/jdo.
       Details: http://bugzilla.exolab.org/show_bug.cgi?id=1445
       (Werner - 20040607)

JDO:   Fixed bug 1648 using contribution from Nick Stuart [nick@newtsplace.com]
       Added code to extend the message generated for ObjectModifiedExceptions.
       Details: http://bugzilla.exolab.org/show_bug.cgi?id=1648
       (Werner - 20040607)

XML:   Fixed bug 1524: Stack Overflow when container elements occur in 
       instance document. The problem was primarily due to the 
       MarshalFramework#searchInheritence method which was allowing
       the ClassDescriptors for schema groups to be searched.
       (kvisco - 20040608)

JDO:   Fixed bug 1402 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added code to handle extend relationships where no additional fields are added. For such cases,
       no STORE SQL statement will be generated (and used).
       Details: http://bugzilla.exolab.org/show_bug.cgi?id=1402
       (Werner - 20040607)

JDO:   Fixed bug 1641 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Upgraded JUnit to version 3.8.1.